test/asm/align-large.asm
SECTION "You lost the game", ROM0, ALIGN[17, 99]
ALIGN 17, 99
